# blprnt

./: .coderabbit.yaml  .cta.json  .dockerignore  .env.example  .gitignore  .prettier.json  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO  biome.json  components.json  docker-compose.yml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  success.html  tsconfig.json  vite.config.ts
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/crates/adapters/: Cargo.toml
backend/crates/adapters/src/: lib.rs  mcp.rs  prompt.rs  runtime.rs  (+1 more)
backend/crates/api/: Cargo.toml
backend/crates/blprnt/: Cargo.toml
backend/crates/employee-import/: Cargo.toml
backend/crates/memory/: Cargo.toml
backend/crates/shared/: Cargo.toml
backend/crates/skills/: Cargo.toml
backend/crates/tools/: Cargo.toml
backend/crates/vault/: Cargo.toml
backend/src/bindings/: AddCommentPayload.ts  CreateEmployeePayload.ts  CreateIssuePayload.ts  CreateProviderPayload.ts  Employee.ts  EmployeeLifeFileKind.ts  EmployeeLifeFilePatchPayload.ts  EmployeeLifeTreeResult.ts  EmployeeRuntimeConfig.ts  EmployeeStreamMessageDto.ts  IssueActionDto.ts  IssueCommentDto.ts  IssueCommentMentionDto.ts  IssuePatchPayload.ts  McpServerAuthState.ts  McpServerPatchPayload.ts  McpServersQuery.ts  ProviderPatch.ts  RunSummaryDto.ts  SearchMemoryPayload.ts  TelegramConfigDto.ts  TelegramLinkCodeDto.ts  TurnStep.ts  UpsertTelegramConfigPayload.ts
crates/adapters/: Cargo.toml
crates/adapters/src/: events.rs  lib.rs  prompt.rs  runtime.rs  traits.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  dto.rs  events.rs  lib.rs  main.rs  provider_helpers.rs  state.rs  telegram.rs
crates/app_core/: Cargo.toml  build.rs
crates/app_core/src/: consts.rs  debug.rs  engine_manager.rs  lib.rs  mcp_runtime.rs  menu.rs  setup.rs  tunnel_handler.rs
crates/binding_gen/: Cargo.toml
crates/binding_gen/src/: main.rs
crates/blprnt/: Cargo.toml
crates/blprnt/src/: logging.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: apply_patch.rs  blprnt.rs  blprnt_dispatch.rs  blprnt_settings.rs  bun_runtime.rs  consts.rs  lib.rs  openrouter.rs  paths.rs  personality_files.rs  personality_service.rs  plan_utils.rs  quick_encrypt.rs  report_bug.rs  sandbox_flags.rs  skills_utils.rs  tokenizer.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: coordinator.rs  event_bus.rs  events.rs  lib.rs  state.rs
crates/engine_v2/: Cargo.toml  README.md
crates/engine_v2/src/: compact.md  controller.rs  lib.rs  prelude.rs  queue.rs  terminal.rs
crates/json-repair/: Cargo.toml
crates/json-repair/src/: imports.rs  repair_json_accidental_single_quote_instead_of_a_double_quote.rs  repair_json_close_unexpected_eof.rs  repair_json_comma_behavior.rs  repair_json_control_characters.rs  repair_json_mismatched_brackets.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: browser.rs  lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: connection.rs  lib.rs  surreal_id.rs
crates/playground/: Cargo.toml
crates/playground/src/: lib.rs
crates/prompt/: Cargo.toml
crates/prompt/src/: lib.rs
crates/prompt/tests/: prompt-templates.rs
crates/providers/: Cargo.toml  README.md
crates/providers/src/: consts.rs  errors.rs  lib.rs  provider_adapter.rs  traits.rs  types.rs
crates/qmd/: Cargo.toml
crates/qmd/src/: error.rs  llm.rs  maintenance.rs  model_management.rs  storage.rs  store.rs  surreal_storage.rs  types.rs
crates/qmd/tests/: qmd_integration.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: credentials.rs  events.rs  lib.rs  paths.rs  sandbox_flags.rs  skills_utils.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: event.rs  event_loop.rs  index.rs  lib.rs  selection.rs  sync.rs  thread.rs  vi_mode.rs
crates/tools/: Cargo.toml  build.rs
crates/tools/src/: lib.rs  prelude.rs  tool_trait.rs  tool_use.rs  tools.rs
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
tauri-src/: Cargo.toml  tauri.conf.json
tauri-src/capabilities/: default.json
tauri-src/icons/: icon.icns
tauri-src/personalities/analytical/: PERSONALITY.md
tauri-src/personalities/concise/: PERSONALITY.md
tauri-src/personalities/conversational/: PERSONALITY.md
tauri-src/personalities/creative/: PERSONALITY.md
tauri-src/personalities/direct/: PERSONALITY.md
tauri-src/personalities/formal/: PERSONALITY.md
tauri-src/personalities/guide/: PERSONALITY.md
tauri-src/personalities/professor/: PERSONALITY.md
tauri-src/personalities/supportive/: PERSONALITY.md
tauri-src/personalities/verbose/: PERSONALITY.md
tauri-src/skills/api-design/: SKILL.md
tauri-src/skills/architecture-planning/: SKILL.md
tauri-src/skills/brainstorming/: SKILL.md
tauri-src/skills/clean-code/: SKILL.md
tauri-src/skills/code-review/: SKILL.md
tauri-src/skills/code-sanitizer/: SKILL.md
tauri-src/skills/codebase-mapping/: SKILL.md
tauri-src/skills/dependency-analysis/: SKILL.md
tauri-src/skills/docs-seeker/: SKILL.md  WORKFLOWS.md
tauri-src/skills/documentation/: SKILL.md
tauri-src/skills/frontend-design/: SKILL.md
tauri-src/skills/migration/: SKILL.md
tauri-src/skills/pattern-detection/: SKILL.md
tauri-src/skills/remotion/: SKILL.md
tauri-src/skills/requirement-clarification/: SKILL.md
tauri-src/skills/rust-language/: SKILL.md
tauri-src/skills/security-scan/: SKILL.md
tauri-src/skills/senior-fullstack/: SKILL.md
tauri-src/skills/systematic-debugging/: SKILL.md
tauri-src/skills/task-breakdown/: SKILL.md
tauri-src/skills/test-driven-development/: SKILL.md
tauri-src/skills/test-generation/: SKILL.md
tauri-src/skills/threejs/: SKILL.md
tauri-src/skills/user-intent-parser/: SKILL.md
tauri-src/src/: main.rs  setup.rs  surreal_guard.rs
tauri-src/windows/: choco.ps1  hooks.nsi  installer.nsi  sign-wrapper.cmd  sign.ps1
tauri-src/windows/tmp/: metadata.json
(+1577 files in other folders)
