[workspace]
members = [
  "crates/api",
  # "crates/engine_v2",
  "crates/json-repair",
  "crates/macros",
  "crates/oauth",
  "crates/persistence",
  "crates/providers",
  "crates/sandbox", 
  "crates/shared",
  "crates/terminal",
  "crates/tools",
  "crates/vault",
]
resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 2
strip = false

# [profile.release]
# lto = true
# strip = true
# opt-level = 3
# panic = 'abort'
# codegen-units = 1

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
tunnel-client = { git = "https://github.com/blprnt-ai/tunnel-relay.git", branch = "main", version = "0.1.2" }

aes-gcm                        = { version = "0.10.3" }
anyhow                         = { version = "1.0.100" }
arc-swap                       = { version = "1.7.1" }
askama                         = { version = "0.15.1" }
async-stream                   = { version = "0.3.6" }
async-trait                    = { version = "0.1.89" }
axum                           = { version = "0.8.6" }
backtrace                      = { version = "0.3", features = ["serde"] }
base32                         = { version = "0.5.1" }
base64                         = { version = "0.22" }
blkid                          = { version = "1.0.1" }
bytes                          = { version = "1.11.0" }
candle-core                    = { version = "0.9.1" }
candle-nn                      = { version = "0.9.1" }
cap-async-std                  = { version = "3.4.4" }
chacha20poly1305               = { version = "0.10.1", features = ["alloc"] }
chrono                         = { version = "0.4", default-features = false, features = ["clock", "serde",] }
clap                           = { version = "4.5.48", features = ["derive"] }
colored                        = { version = "3.0.0" }
config                         = { version = "0.14" }
convert_case                   = { version = "0.11.0" }
criterion                      = { version = "0.8.0", features = ["html_reports"] }
csv                            = { version = "1.3" }
ctor                           = { version = "0.6.3" }
darling                        = { version = "0.23.0" }
diffy                          = { version = "0.4" }
directories                    = { version = "6.0.0" }
dirs                           = { version = "6.0.0" }
dotenvy                        = { version = "0.15.7" }
dunce                          = { version = "1.0.5" }
ed25519-dalek                  = { version = "2.2.0", features = ["rand_core"] }
error-tree                     = { version = "0.6.0" }
eventsource-stream             = { version = "0.2.3" }
export-magic                   = { version = "0.3.6" }
fake                           = { version = "4.4.0", features = ["chrono", "derive", "uuid"] }
fastembed                      = { version = "5.5.0", features = ["hf-hub-rustls-tls", "qwen3"] }
flate2                         = { version = "1.1.5" }
futures                        = { version = "0.3" }
futures-core                   = { version = "0.3.5" }
futures-timer                  = { version = "3.0.2" }
futures-util                   = { version = "0.3" }
gix                            = { version = "0.76.0", features = ["async-network-client", "worktree-mutation", "tree-editor"] }
governor                       = { version = "0.10.1" }
hex                            = { version = "0.4.3" }
hkdf                           = { version = "0.12.4" }
hf-hub                         = { version = "0.5.0", features = ["rustls-tls"] }
html-escape                    = { version = "0.2" }
http                           = { version = "1.4.0" }
http-body-util                 = { version = "0.1.3" }
httparse                       = { version = "1" }
humantime                      = { version = "2.3.0" }
hyper                          = { version = "1.8.1" }
hyper-util                     = { version = "0.1.18", features = ["client-legacy", "http1", "tokio"] }
ignore                         = { version = "0.4.24" }
indexmap                       = { version = "2.13.0" }
infer                          = { version = "0.19.0" }
insta                          = { version = "1.34", features = ["json"] }
iota_stronghold                = { version = "2.1.0" }
json5                          = { version = "1.3.0" }
jsonwebtoken                   = { version = "10.2.0", features = ["rust_crypto"] }
lazy_static                    = { version = "1.5.0" }
libc                           = { version = "0.2.175" }
line-ending                    = { version = "1.5.1" }
llama-cpp-4                    = { version = "0.2.5" }
log                            = { version = "0.4.29" }
mac_address                    = { version = "1.1.8" }
machine-uid                    = { version = "0.5.4" }
mime                           = { version = "0.3.16" }
nom                            = { version = "7.1.3" }
notify                         = { version = "8.2.0" }
once_cell                      = { version = "1.21.3" }
ordered-float                  = { version = "5.1.0", features = ["serde"] }
parking_lot                    = { version = "0.12.5" }
pathdiff                       = { version = "0.2" }
percent-encoding               = { version = "2" }
pin-project-lite               = { version = "0.2.16" }
portable-pty                   = { version = "0.9.0" }
pretty_assertions              = { version = "1.4" }
proc-macro2                    = { version = "1.0.103" }
proptest                       = { version = "1.4" }
proptest-derive                = { version = "0.7.0" }
quote                          = { version = "1.0.41" }
rand                           = { version = "0.9" }
rappct                         = { version = "0.13.3" }
rayon                          = { version = "1.10" }
regex                          = { version = "1.11.3" }
reqwest                        = { version = "0.13.2", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls", "stream", "query"] }
reqwest-middleware             = { version = "0.5.1", features = ["json"] }
reqwest-ratelimit              = { version = "0.5.0" }
reqwest-retry-after            = { version = "0.2.1" }
rhai                           = { version = "1.24.0", features = ["sync"] }
rmcp                           = { version = "0.17.0", default-features = false, features = ["client", "macros", "base64", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
rust-stemmers                  = { version = "1.2" }
rs_merkle                      = { version = "1.4" }
same-file                      = { version = "1.0.6" }
schemars                       = { version = "1.2.0" }
semver                         = { version = "1.0.27" }
sentry                         = { version = "0.46.0", features = ["tracing"] }
sentry-tracing                 = { version = "0.46.0" }
serde                          = { version = "1.0.228", features = ["derive"] }
serde_json                     = { version = "1.0.145" }
serde_plain                    = { version = "1.0.2" }
serde-saphyr                   = { version = "0.0.16" }
serial_test                    = { version = "3.3.1" }
sha2                           = { version = "0.10.9" }
similar                        = { version = "2.7.0" }
specta                         = { version = "2.0.0-rc.22", features = ["uuid", "derive", "serde", "serde_json"] }
specta-typescript              = { version = "0.0.9" }
streaming-iterator             = { version = "0.1.9" }
surrealdb                      = { version = "=3.0.0", features = ["kv-mem", "allocator"] }
surrealdb-types                = { version = "=3.0.0", features = ["arbitrary"] }
sysinfo                        = { version = "0.37.2" }
syn                            = { version = "2.0.113", features = ["full"] }
tar                            = { version = "0.4.44" }
tempfile                       = { version = "3.24.0" }
tempdir                        = { version = "0.3.7" }
thiserror                      = { version = "2.0.17" }
tiktoken-rs                    = { version = "0.9.1" }
time                           = { version = "0.3.46", features = ["parsing", "formatting"] }
tokenizers                     = { version = "0.22.2", default-features = false, features = ["onig"] }
tokio                          = { version = "1.49.0", default-features = false, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time", "signal"] }
tokio-stream                   = { version = "0.1" }
tokio-test                     = { version = "0.4" }
tokio-tungstenite              = { version = "0.23.1" }
tokio-util                     = { version = "0.7.18" }
tower-http                     = { version = "0.6.8", features = ["fs"] }
tracing                        = { version = "0.1.43" }
tracing-appender               = { version = "0.2" }
tracing-setup                  = { version = "1.0.4" }
tracing-subscriber             = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }
tree-sitter                    = { version = "0.26.3" }
tree-sitter-go                 = { version = "0.25.0" }
tree-sitter-python             = { version = "0.25.0" }
tree-sitter-rust               = { version = "0.24.0" }
tree-sitter-typescript         = { version = "0.23.2" }
unicode-segmentation           = { version = "1.10" }
url                            = { version = "2.5.8" }
urlencoding                    = { version = "2" }
uuid                           = { version = "1.20.0", features = ["serde", "v4", "v5"] }
walkdir                        = { version = "2.5.0" }
webbrowser                     = { version = "1.0.6" }
windows                        = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_System_Com",] }
wmi                            = { version = "0.18" }
xxhash-rust                    = { version = "0.8.15", features = ["xxh3"] }
zeroize                        = { version = "1.8.2" }
