[workspace]
members = [
  "crates/adapters",
  "crates/api",
  "crates/blprnt",
  "crates/coordinator", 
  "crates/events",
  "crates/json-repair",
  "crates/qmd",
  "crates/macros",
  "crates/memory",
  "crates/oauth",
  "crates/persistence",
  "crates/sandbox", 
  "crates/shared",
  "crates/terminal",
  "crates/tools",
  "crates/vault",
]
resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 2
strip = false

# [profile.release]
# lto = true
# strip = true
# opt-level = 3
# panic = 'abort'
# codegen-units = 1

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
anyhow               = { version = "1.0.100" }
async-trait          = { version = "0.1.89" }
axum                 = { version = "0.8.6" }
base64               = { version = "0.22" }
cap-async-std        = { version = "3.4.4" }
chrono               = { version = "0.4", default-features = false, features = ["clock", "serde",] }
colored              = { version = "3.1.1" }
ctor                 = { version = "0.6.3" }
darling              = { version = "0.23.0" }
directories          = { version = "6.0.0" }
dunce                = { version = "1.0.5" }
error-tree           = { version = "0.6.0" }
export-magic         = { version = "0.3.6" }
fake                 = { version = "4.4.0", features = ["chrono", "derive", "uuid"] }
futures-util         = { version = "0.3" }
hkdf                 = { version = "0.12.4" }
http                 = { version = "1.4.0" }
humantime            = { version = "2.3.0" }
ignore               = { version = "0.4.24" }
iota_stronghold      = { version = "2.1.0" }
hex                  = { version = "0.4.3" }
json5                = { version = "1.3.0" }
lazy_static          = { version = "1.5.0" }
libc                 = { version = "0.2.175" }
log                  = { version = "0.4.29" }
machine-uid          = { version = "0.5.4" }
once_cell            = { version = "1.21.3" }
parking_lot          = { version = "0.12.5" }
proc-macro2          = { version = "1.0.103" }
quote                = { version = "1.0.41" }
rand                 = { version = "0.9" }
regex                = { version = "1.11.3" }
reqwest              = { version = "0.13.2", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls", "stream", "query"] }
reqwest-middleware   = { version = "0.5.1", features = ["json"] }
same-file            = { version = "1.0.6" }
schemars             = { version = "1.2.0" }
serde                = { version = "1.0.228", features = ["derive", "rc"] }
serde_json           = { version = "1.0.145" }
serde_plain          = { version = "1.0.2" }
serde-saphyr         = { version = "0.0.16" }
sha2                 = { version = "0.10.9" }
specta               = { version = "2.0.0-rc.22", features = ["uuid", "derive", "serde", "serde_json"] }
surrealdb            = { version = "=3.0.4", features = ["kv-mem", "kv-rocksdb", "allocator"] }
surrealdb-types      = { version = "=3.0.4", features = ["arbitrary"] }
syn                  = { version = "2.0.113", features = ["full"] }
thiserror            = { version = "2.0.17" }
time                 = { version = "0.3.46", features = ["parsing", "formatting"] }
tokio                = { version = "1.49.0", default-features = false, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time", "signal"] }
tokio-util           = { version = "0.7.18" }
tower-http           = { version = "0.6.8", features = ["fs"] }
tracing              = { version = "0.1.43" }
tracing-setup        = { version = "1.0.4" }
tracing-subscriber   = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }
url                  = { version = "2.5.8" }
urlencoding          = { version = "2" }
uuid                 = { version = "1.20.0", features = ["serde", "v4", "v5"] }
webbrowser           = { version = "1.0.6" }
zeroize              = { version = "1.8.2" }
