[workspace]
members = [
  "crates/adapters",
  "crates/api",
  "crates/blprnt",
  "crates/employee-import",
  "crates/coordinator", 
  "crates/events",
  "crates/json-repair",
  "crates/qmd",
  "crates/macros",
  "crates/memory",
  "crates/oauth",
  "crates/persistence",
  "crates/sandbox", 
  "crates/shared",
  "crates/skills",
  "crates/tools",
  "crates/vault",
]
exclude = [
  "crates/engine_v2",
  "crates/providers",
]
resolver = "2"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "unwind"
incremental = false
codegen-units = 2
strip = false

# [profile.release]
# lto = true
# strip = true
# opt-level = 3
# panic = 'abort'
# codegen-units = 1

[profile.dev-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true

[profile.docker-release]
inherits = "release"
lto = false
codegen-units = 256
strip = true

[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
anyhow               = { version = "1.0.102" }
argon2               = { version = "0.5.3" }
async-trait          = { version = "0.1.89" }
axum                 = { version = "0.8.6" }
base64               = { version = "0.22" }
clap                 = { version = "4.6.0", features = ["derive"] }
cap-async-std        = { version = "3.4.4" }
chrono               = { version = "0.4", default-features = false, features = ["clock", "serde",] }
colored              = { version = "3.1.1" }
ctor                 = { version = "0.8.0" }
darling              = { version = "0.23.0" }
directories          = { version = "6.0.0" }
dunce                = { version = "1.0.5" }
error-tree           = { version = "0.6.0" }
export-magic         = { version = "0.3.6" }
hkdf                 = { version = "0.13.0" }
http                 = { version = "1.4.0" }
ignore               = { version = "0.4.24" }
iota_stronghold      = { version = "2.1.0" }
hex                  = { version = "0.4.3" }
json5                = { version = "1.3.1" }
lazy_static          = { version = "1.5.0" }
machine-uid          = { version = "0.5.4" }
once_cell            = { version = "1.21.4" }
proc-macro2          = { version = "1.0.106" }
quote                = { version = "1.0.45" }
rand                 = { version = "0.9" }
regex                = { version = "1.12.3" }
reqwest              = { version = "0.13.2", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls", "stream", "query"] }
rmcp                 = { version = "1.3.0", default-features = false, features = ["client", "auth", "reqwest", "transport-child-process", "transport-streamable-http-client-reqwest"] }
same-file            = { version = "1.0.6" }
schemars             = { version = "1.2.1" }
serde                = { version = "1.0.228", features = ["derive", "rc"] }
serde_json           = { version = "1.0.145" }
serde_yaml           = { version = "0.9.34" }
serde_plain          = { version = "1.0.2" }
serde-saphyr         = { version = "0.0.23" }
sha2                 = { version = "0.11.0" }
surrealdb            = { version = "=3.0.5", features = ["kv-mem", "kv-rocksdb", "allocator"] }
surrealdb-types      = { version = "=3.0.5", features = ["arbitrary"] }
syn                  = { version = "2.0.117", features = ["full"] }
thiserror            = { version = "2.0.18" }
tokio                = { version = "1.50.0", default-features = false, features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time", "signal"] }
tokio-util           = { version = "0.7.18" }
tower-http           = { version = "0.6.8", features = ["fs", "cors"] }
tracing              = { version = "0.1.43" }
tracing-setup        = { version = "1.0.4" }
tracing-subscriber   = { version = "0.3.23", features = ["env-filter", "fmt", "std"] }
ts-rs                = { version = "12.0.1", features = ["uuid-impl", "chrono-impl", "serde-json-impl"] }
utoipa               = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
url                  = { version = "2.5.8" }
urlencoding          = { version = "2" }
uuid                 = { version = "1.23.0", features = ["serde", "v4", "v5"] }
webbrowser           = { version = "1.2.0" }
zeroize              = { version = "1.8.2" }
