[package]
name = "blprnt"
version = "1.2.5"
edition = "2024"

[[bin]]
name = "blprnt"
path = "src/main.rs"

[features]
default = []
debug-tracing = ["app_core/debug-tracing"]
testing = ["common/testing", "app_core/testing", "persistence/testing"]

[dependencies]
# Local dependencies
app_core           = { path = "../crates/app_core" }
common             = { path = "../crates/common" }
persistence        = { path = "../crates/persistence" }
sandbox            = { path = "../crates/sandbox" }
vault              = { path = "../crates/vault" }

# Workspace dependencies
anyhow                         = { workspace = true }
dotenvy                        = { workspace = true }
chrono                         = { workspace = true }
colored                        = { workspace = true }
fake                           = { workspace = true }
reqwest                        = { workspace = true }
serde                          = { workspace = true }
serde_json                     = { workspace = true }
sysinfo                        = { workspace = true }
tauri                          = { workspace = true }
tauri-plugin-clipboard         = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-cors-fetch        = { workspace = true }
tauri-plugin-deep-link         = { workspace = true }
tauri-plugin-dialog            = { workspace = true }
tauri-plugin-fs                = { workspace = true }
tauri-plugin-http              = { workspace = true }
tauri-plugin-log               = { workspace = true }
tauri-plugin-notification      = { workspace = true }
tauri-plugin-opener            = { workspace = true }
tauri-plugin-os                = { workspace = true }
tauri-plugin-prevent-default   = { workspace = true }
tauri-plugin-process           = { workspace = true }
tauri-plugin-shell             = { workspace = true }
tauri-plugin-single-instance   = { workspace = true }
tauri-plugin-store             = { workspace = true }
tauri-plugin-updater           = { workspace = true }
tauri-plugin-window-state      = { workspace = true }
tokio                          = { workspace = true }
tracing                        = { workspace = true }
tracing-subscriber             = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2.8.5", features = ["macos-private-api"] }

[build-dependencies]
tauri-build = "2.4.1"

[dev-dependencies]
persistence = { path = "../crates/persistence" }
tools = { path = "../crates/tools" }

ctor = { workspace = true }
lazy_static = { workspace = true }
similar = { workspace = true }
tracing-subscriber = { workspace = true }
