[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
employee-import = { path = "../employee-import" }
events =      { path = "../events" }
memory =      { path = "../memory" }
persistence = { path = "../persistence" }
skills =      { path = "../skills" }
shared =      { path = "../shared" }
vault =       { path = "../vault" }

axum =               { workspace = true, features = ["ws"] }
anyhow =             { workspace = true }
chrono =             { workspace = true }
colored =            { workspace = true }
lazy_static =        { workspace = true }
serde =              { workspace = true }
serde_json =         { workspace = true }
thiserror =          { workspace = true }
tokio =              { workspace = true }
tower-http =         { workspace = true }
tracing =            { workspace = true }
ts-rs =              { workspace = true }
utoipa =             { workspace = true }

[dev-dependencies]
tempfile = "3.23.0"
tower = "0.5.2"
