[package]
name = "app_core"
version = "0.1.0"
edition = "2024"

[features]
default = []
testing = ["common/testing", "engine_v2/testing", "persistence/testing"]
debug-tracing = ["engine_v2/debug-tracing"]

[dependencies]
common        = { path = "../common" }
engine_v2     = { path = "../engine_v2" }
oauth         = { path = "../oauth" }
persistence   = { path = "../persistence" }
sandbox       = { path = "../sandbox" }
vault         = { path = "../vault" }
tunnel-client = { workspace = true }

anyhow                    = { workspace = true }
async-trait               = { workspace = true }
axum                      = { workspace = true }
base64                    = { workspace = true }
chrono                    = { workspace = true }
convert_case              = { workspace = true }
futures-util              = { workspace = true }
http                      = { workspace = true }
http-body-util            = { workspace = true }
hyper                     = { workspace = true }
hyper-util                = { workspace = true }
reqwest                   = { workspace = true }
rmcp                      = { workspace = true }
serde                     = { workspace = true }
serde_json                = { workspace = true }
specta                    = { workspace = true }
surrealdb                 = { workspace = true }
tauri                     = { workspace = true }
tauri-plugin-store        = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-specta              = { workspace = true }
tokio                     = { workspace = true }
tokio-tungstenite         = { workspace = true }
tokio-util                = { workspace = true }
tower-http                = { workspace = true }
tracing                   = { workspace = true }
url                       = { workspace = true }
urlencoding               = { workspace = true }
uuid                      = { workspace = true }

[lib]
path = "src/lib.rs"

[dev-dependencies]
engine_v2 = { path = "../engine_v2", features = ["testing"] }
