[package]
name = "bindings_gen"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "bindings-gen"
path = "src/main.rs"

[dependencies]
app_core    = { path = "../app_core" }
common      = { path = "../common" }
persistence = { path = "../persistence" }

anyhow            = { workspace = true }
specta-typescript = { workspace = true }
tauri             = { workspace = true }
tauri-specta      = { workspace = true }
tokio             = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { workspace = true, features = ["macos-private-api"] }
