[package]
name = "blprnt"
version = "0.1.0"
edition = "2024"

[dependencies]
api =         { path = "../api" }
coordinator = { path = "../coordinator" }
persistence = { path = "../persistence" }

anyhow =             { workspace = true }
chrono =             { workspace = true }
colored =            { workspace = true }
tokio =              { workspace = true }
tracing =            { workspace = true }
tracing-subscriber = { workspace = true }
