[package]
name = "blprnt"
version = "0.1.0"
edition = "2024"

[features]
default = ["api", "coordinator", "adapter"]
api = ["dep:api"]
coordinator = ["dep:coordinator"]
adapter = ["dep:adapters"]

[dependencies]
adapters =    { path = "../adapters", optional = true }
api =         { path = "../api", optional = true }
coordinator = { path = "../coordinator", optional = true }
persistence = { path = "../persistence" }

anyhow =             { workspace = true }
chrono =             { workspace = true }
colored =            { workspace = true }
tokio =              { workspace = true }
tracing =            { workspace = true }
tracing-subscriber = { workspace = true }
