[package]
name = "coordinator"
version = "0.1.0"
edition = "2024"

[dependencies]
persistence = { path = "../persistence" }

anyhow =      { workspace = true }
chrono =      { workspace = true }
lazy_static = { workspace = true }
tokio =       { workspace = true }
tokio-util =  { workspace = true }
tracing =     { workspace = true }
