[package]
name = "json-repair"
version = "0.0.1"
edition = "2024"

[dependencies]
error-tree         = { workspace = true }
export-magic       = { workspace = true }
json5              = { workspace = true }
regex              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
tracing            = { workspace = true }
tracing-setup      = { workspace = true }
tracing-subscriber = { workspace = true }
