#![warn(unused, unused_crate_dependencies)]

[package]
name = "persistence"
edition = "2024"
version = "0.0.1"

[features]
default = []
testing = []

[lib]
name = "persistence"
path = "src/lib.rs"

[dependencies]
# Local Dependencies
shared = { path = "../shared" }
macros = { path = "../macros" }

# Workspace dependencies
anyhow             = { workspace = true }
async-trait        = { workspace = true }
chrono             = { workspace = true }
fake               = { workspace = true }
lazy_static        = { workspace = true }
regex              = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
surrealdb          = { workspace = true }
surrealdb-types    = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs              = { workspace = true }
utoipa             = { workspace = true }
uuid               = { workspace = true }

[dev-dependencies]
ctor = { workspace = true }
