[package]
name = "playground"
edition = "2024"
version = "0.0.1"

[lib]
name = "playground"
path = "src/lib.rs"

[dependencies]

# Workspace dependencies
anyhow          = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
surrealdb       = { workspace = true }
surrealdb-types = { workspace = true }
tokio           = { workspace = true }

